# webmcp-sandbox

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  LICENSE  Makefile  README.md  WebMCP Sandbox Implementation Plan.md  WebMCP Sandbox Tech Stack.md  docker-compose.yml  opencode.json
.github/workflows/: docker-publish.yml
.opencode/agents/: deepseek-v4-pro.md  glm-5.2.md  kimi-k2.7.md  nemotron-3-ultra.md
.opencode/rules/: spiderweb.md
Docs/: index.html
Docs/architecture/: system-overview.html
Docs/audits/: baseline-quality.html  e2e-bridge-verification.html  sprint-2-verification.html  v0.1-exercise-verification.html
Docs/css/: design-tokens.css  docs-base.css  docs-print.css  docs-schema.js
Docs/scripts/: check-doc-drift.mjs  check-doc-drift.test.ts  convert-md-to-html.mjs  convert-md-to-html.test.ts  generate-index.mjs  generate-index.test.ts  mark-tasks-complete.mjs  mark-tasks-complete.test.ts  package-lock.json  package.json  populate-data-files.mjs  populate-data-files.test.ts  query-open-tasks.mjs  query-open-tasks.test.ts  serve.mjs  serve.test.ts  tsconfig.json  validate-docs.mjs  validate-docs.test.ts
Docs/templates/: audit.html  epic-backlog.html  epic-overview.html  residual.html  (+4 more)
docker/: Dockerfile  start.sh
exercises/: expected.json  mcp-client.mjs  package-lock.json  package.json  playbook.md  run-exercise.sh  smoke.mjs
fixtures/: hello.html
mcp-server/: Cargo.toml  README.md
mcp-server/src/: main.rs  tools.rs
scripts/: launch-fleet.sh  teardown-fleet.sh  validate-fresh-pull.sh
webmcp-extension/: README.md  package-lock.json  package.json  tsconfig.json  wxt.config.ts
(+24 files in other folders)
