[package]
name = "webmcp-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0", features = ["server", "transport-io", "transport-sse-server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
